[gd_scene load_steps=4 format=3 uid="uid://cem0yrawhwf00"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_juo5s"]
[ext_resource type="Texture2D" uid="uid://dmqgjb33c3675" path="res://ui/UI_Square.png" id="2_bnrwh"]
[ext_resource type="FontFile" path="res://font/new_dynamicfont.tres" id="3_5lwx4"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_juo5s")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 219.999
offset_bottom = -18.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("2_bnrwh")
texture_progress = ExtResource("2_bnrwh")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)
tint_progress = Color(1, 0, 0, 1)

[node name="StaminaBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 219.999
offset_bottom = -68.0
grow_vertical = 0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("2_bnrwh")
texture_progress = ExtResource("2_bnrwh")
tint_under = Color(0.211765, 0.211765, 0.211765, 1)

[node name="AmmoText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 188.0
offset_bottom = -109.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_5lwx4")
text = "Ammo: 50"

[node name="DebugInfo" type="Node" parent="."]

[node name="MovementState" type="Label" parent="DebugInfo"]
offset_left = 1034.0
offset_top = 3.0
offset_right = 1275.0
offset_bottom = 67.0
